--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,5 +15,8 @@
 		"codespaces": {
 			"openFiles": ["CONTRIBUTING.md"]
 		}
+	},
+	"containerEnv": {
+		"NODE_EXTRA_CA_CERTS": "/etc/ssl/certs/ca-certificates.crt"
 	}
 }
