--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 		"type=bind,source=${localEnv:HOME}/.ssh,target=/home/node/.ssh,consistency=cached",
 		"type=bind,source=${localEnv:HOME}/.n8n,target=/home/node/.n8n,consistency=cached"
 	],
-	"forwardPorts": [8080, 5678],
+	"forwardPorts": [8080, 5678, 5432],
 	"postCreateCommand": "corepack prepare --activate && pnpm install",
 	"postAttachCommand": "pnpm build",
 	"customizations": {
