--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ N8N_TEMPLATES_ENABLED=false
 EXTERNAL_FRONTEND_HOOKS_URLS=
 N8N_DIAGNOSTICS_CONFIG_FRONTEND=
 N8N_DIAGNOSTICS_CONFIG_BACKEND=
+# Learn more: https://docs.n8n.io/hosting/configuration/task-runners/
+N8N_RUNNERS_ENABLED=true
 # settings
 N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
 # db: https://docs.n8n.io/hosting/configuration/environment-variables/database/#postgresql
