--- a/.env.devcontainer.example
+++ b/.env.devcontainer.example
@@ -13,5 +13,5 @@ N8N_RUNNERS_ENABLED=true
 N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
 # db: https://docs.n8n.io/hosting/configuration/environment-variables/database/#postgresql
 DB_TYPE=postgresdb
-DB_POSTGRESDB_HOST=127.0.0.1
+DB_POSTGRESDB_HOST=postgres
 DB_POSTGRESDB_PASSWORD=password
