docs: .env 파일에 N8N_METRICS 및 QUEUE_HEALTH_CHECK_ACTIVE 추가, 새로운 문서 블록 추가

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
 DB_TYPE=postgresdb
 DB_POSTGRESDB_HOST=127.0.0.1
 DB_POSTGRESDB_PASSWORD=password
+# https://docs.n8n.io/hosting/logging-monitoring/monitoring/
+N8N_METRICS=true
+QUEUE_HEALTH_CHECK_ACTIVE=true
