--- a/docker/images/n8n-bc/Dockerfile.local
+++ b/docker/images/n8n-bc/Dockerfile.local
@@ -11,7 +11,8 @@ ENV NODE_EXTRA_CA_CERTS=/etc/ssl/certs/ca-certificates.crt
 # Build the application from source
 WORKDIR /src
 COPY . /src
-RUN --mount=type=cache,id=pnpm-store,target=/root/.local/share/pnpm/store --mount=type=cache,id=pnpm-metadata,target=/root/.cache/pnpm/metadata DOCKER_BUILD=true pnpm install --frozen-lockfile --verbose
+RUN chown -R node:node /src && \
+	--mount=type=cache,id=pnpm-store,target=/root/.local/share/pnpm/store --mount=type=cache,id=pnpm-metadata,target=/root/.cache/pnpm/metadata DOCKER_BUILD=true pnpm install --frozen-lockfile
 RUN pnpm build
 
 # Delete all dev dependencies
@@ -36,8 +37,7 @@ ENV N8N_RELEASE_TYPE=${N8N_RELEASE_TYPE}
 COPY company.pem /usr/local/share/ca-certificates
 RUN update-ca-certificates
 
-# Install Docker
-RUN apk add docker-cli
+# TODO: install docker or ...
 
 WORKDIR /home/node
 COPY --from=builder /compiled /usr/local/lib/node_modules/n8n
@@ -71,8 +71,8 @@ RUN \
 	chown node:node .n8n
 
 # install pre-installed community nodes
-RUN mkdir .n8n/nodes
-RUN .n8n/nodes && \
+RUN mkdir .n8n/nodes && \
+	cd .n8n/nodes && \
 	npm i n8n-nodes-mcp n8n-nodes-globals
 
 ENV SHELL /bin/sh
