--- a/docker/images/n8n-bc/Dockerfile.local
+++ b/docker/images/n8n-bc/Dockerfile.local
@@ -11,8 +11,8 @@ ENV NODE_EXTRA_CA_CERTS=/etc/ssl/certs/ca-certificates.crt
 # Build the application from source
 WORKDIR /src
 COPY . /src
-RUN chown -R node:node /src && \
-	--mount=type=cache,id=pnpm-store,target=/root/.local/share/pnpm/store --mount=type=cache,id=pnpm-metadata,target=/root/.cache/pnpm/metadata DOCKER_BUILD=true pnpm install --frozen-lockfile
+RUN chown -R node:node /src
+RUN --mount=type=cache,id=pnpm-store,target=/root/.local/share/pnpm/store --mount=type=cache,id=pnpm-metadata,target=/root/.cache/pnpm/metadata DOCKER_BUILD=true pnpm install --frozen-lockfile
 RUN pnpm build
 
 # Delete all dev dependencies
@@ -37,7 +37,7 @@ ENV N8N_RELEASE_TYPE=${N8N_RELEASE_TYPE}
 COPY company.pem /usr/local/share/ca-certificates
 RUN update-ca-certificates
 
-# TODO: install docker or ...
+# TODO: DinD or DooD...
 
 WORKDIR /home/node
 COPY --from=builder /compiled /usr/local/lib/node_modules/n8n
